# data-server

./: .dockerignore  .env-example  Dockerfile  README.md  pyproject.toml
app/: cli.py  config.py  db.py  main.py  models.py  repository.py  schemas.py
app/services/: ingest.py  route_generator.py  route_generator_v2.py
app/tourapi/: client.py  normalizer.py
tests/: conftest.py  test_normalizer.py  test_route_generator.py  test_route_generator_v2.py  test_route_v2_contract.py  test_route_v2_quality.py  test_routes_api.py
tests/fixtures/: area_based_list_sample.json
