[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stanat-data-server"
version = "0.1.0"
description = "stanat TourAPI 배치 적재 트랙 (FastAPI). areaBasedList → external_places upsert."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",          # httpx mock
    "ruff>=0.5",
]

[project.scripts]
data-server-ingest = "app.cli:main"

[tool.setuptools]
packages = ["app", "app.tourapi", "app.services"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
